<resources>
    <string name="app_name">Melody Box</string>
    <string name="made_for_you">Made For You</string>
    <string name="my_albums">My Albums</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="user">User</string>
    <string name="sign_up_for_musicapp">Sign Up for MusicApp</string>
    <string name="log_in">Log In</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="manager_user">Manager User</string>
    <string name="manager_song">Manager Song</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_name">Your Name</string>
    <string name="register">Register</string>
    <string name="analytics">Analytics</string>
    <string name="profile">Profile</string>
    <string name="delete">Delete</string>
    <string name="song_name">Song name</string>
    <string name="singer_name">singer name</string>
    <string name="date_time">date time</string>
    <string name="detail">Detail</string>
    <string name="no_user_information">No user information</string>
    <string name="favorite_songs">Favorite Songs</string>
</resources>