<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_song"
            android:layout_width="83dp"
            android:layout_height="79dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/song_name"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/song_name"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_song"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/singer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/singer_name"
            app:layout_constraintStart_toEndOf="@+id/img_song"
            app:layout_constraintTop_toBottomOf="@+id/song_name" />

        <TextView
            android:id="@+id/time_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/date_time"
            app:layout_constraintStart_toEndOf="@+id/img_song"
            app:layout_constraintTop_toBottomOf="@+id/singer_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@android:color/white"
            app:backgroundTint="#02BCD7"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>